<resources>
    <string name="app_name">Complete_Dashboard</string>
    <string name="create_account">create new account</string>
    <string name="registration">Registration as:</string>
    <string name="email">Email</string>
    <string name="password1">Create a Password</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="already_have_account">already have account</string>
    <string name="password2">Confirm Password</string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="OR">OR</string>
    <string name="Dont_have_an_account">Dont have an account? Sign up.</string>


    <string name="notDeted">Unable to Get Location</string>
    <string name="settings">Settings</string>
    <string name="textwarn">Permission Mandatory for this App</string>




    <string name="Spinner_title1">Select Area</string>
    <string name="Spinner_title2">Select Type</string>

    <string-array name="areas">
        <item>Adarsh Nagar</item>
        <item>Gulabbadi</item>
        <item>Madar Gate</item>
        <item>Ramganj</item>
        <item>Kesarganj</item>
        <item>Badliya Circle</item>
        <item>Chandarbardai</item>
        <item>Vaishali Nagar</item>
        <item>Johansganj</item>
    </string-array>

    <string-array name="acommTypes">
        <item>Hostel</item>
        <item>PG</item>
        <item>Rent</item>
    </string-array>


    <string-array name="filterTypes">
        <item>newer to older</item>
        <item>older to newer</item>
    </string-array>


    <string name="title_activity_maps">Map</string>

    <!--Fetch Address-->
    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>


    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="error_user_exists">Email is already used</string>
    <string name="OK">OK</string>
    <string name="AC">AC</string>
    <string name="Non_Ac">Non-AC</string>
    <string name="Attach">Attach Let-Bath</string>
    <string name="select_facilities_charges"><![CDATA[Select Facilities & Charges-]]></string>
    <string name="facilities_charges"><![CDATA[Facilities & Charges]]></string>



    <string-array name="room_times">
        <item>1 month</item>
        <item>6 month</item>
        <item>1 year</item>
    </string-array>

    <string-array name="roomTypes">
        <item>1-BED</item>
        <item>2-BED</item>
        <item>3-BED</item>
        <item>4-BED</item>
    </string-array>

    <string-array name="installment">
        <item>0</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>6</item>
        <item>12</item>
    </string-array>

    <!--<string-array name="rules">
        <item>Guardian Entry</item>
        <item>Female Person no allowed</item>
        <item>Time Restriction 10:00 a.m.</item>
        <item>Non-Veg Not Allowed</item>
        <item>Drinking Not Allowed</item>
        <item>Smoking Not Allowed</item>

        <item>Bthe time 6.00 a.m. to 10.00 a.m.</item>
    </string-array>-->
    <string-array name="rules">
    <item>1. No drinking</item>
    <item>2. No smoking</item>
    <item>4. No boys allowed</item>
    <item>5. No girls allowed</item>
    <item>6. Non-Veg not allowed.</item>
    <item>7. Maintain cleanliness</item>
    <item>8. Maintain discipline</item>
    <item>9. Only parents/guardians allowed</item>
    </string-array>

</resources>
