<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Start.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">



        <TextView
            android:id="@+id/login_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/header"
            >

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_name"
            android:layout_marginTop="10dp"
            android:inputType="textPassword">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:padding="22dp"
            />

        <TextView
            android:id="@+id/tv_forgotPWD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Forgot you password? Get help signing in"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:gravity="left"
            android:textSize="16sp"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#E0E0E0"
            android:layout_weight=".4"
           android:layout_gravity="center_vertical"/>
<TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/OR"
    android:gravity="center_horizontal"
    android:textSize="16dp"
    android:layout_weight=".2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="#E0E0E0"
                android:layout_weight=".4"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Dont_have_an_account"
            android:textColor="#ffffff"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:background="@color/colorAccent"
            android:layout_alignParentBottom="true"
            />


    </LinearLayout>



</ScrollView>
