<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:fadingEdge="none"
    android:background="@color/colorPrimaryDark"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar"
        android:padding="12dp"
        >

        <!-- <include layout="@layout/tool_bar_layout"
             android:id="@+id/toolbar"
             />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
           android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

    <TextView
        android:id="@+id/reg_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SIGNUP"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#e0e0e0"
        android:layout_gravity="center" />


          <!--  <RadioGroup
                android:id="@+id/start_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                >

                <RadioButton
                    android:id="@+id/start_seller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Seller"
                    android:padding="20dp"
                    android:textSize="25sp"
                    android:textColor="#ffffff"
                    />
                <RadioButton
                    android:id="@+id/start_seeker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Seeker"
                    android:padding="14dp"
                    android:textSize="23sp"
                    android:textColor="#ffffff"
                    />

            </RadioGroup>-->

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/name"
                    android:layout_gravity="bottom"
                    />
               <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/header"
                    >

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="7dp"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/email"
                    android:layout_gravity="bottom"


                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_below="@+id/reg_name"
                    >

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="7dp"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/contact"
                    android:layout_gravity="bottom"

                    />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_email"
        >

        <EditText
            android:id="@+id/etNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number"
            android:inputType="number"
            android:maxLength="10"/>
    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/password"
                    android:layout_gravity="bottom"

                    />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_contact"
        android:layout_marginTop="7dp">

        <EditText
            android:id="@+id/etPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password1"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="7dp"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/password"
                    android:layout_gravity="bottom"

                    />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_contact"
        android:layout_marginTop="7dp">

        <EditText
            android:id="@+id/etPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password2"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>


    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_password"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/create_account"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:padding="17dp"
       />

    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup"
        android:layout_marginTop="10dp"
        android:backgroundTint="#ffffff"
        android:text="@string/already_have_account"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:padding="15dp"
        />
        </LinearLayout>

</LinearLayout>

</ScrollView>